2007-04-19  Miloslav Trmac  <mitr@redhat.com>

	* configure.in: Release 1.91.1.
	* NEWS: Update.

	* po/LINGUAS: Note that empty translations are removed.

2007-03-26  Miloslav Trmac  <mitr@redhat.com>

	* consolehelper.c: Allow building consolehelper-nox.c without GTK+
	headers.  Patch by Robert Scheck <redhat-bugzilla@linuxnetz.de>.

2007-03-19  Miloslav Trmac  <mitr@redhat.com>

	* configure.in: Release 1.91.
	* NEWS: Update.

2007-03-17  Miloslav Trmac  <mitr@redhat.com>

	* userhelper.c (wrap): Preserve values of all environment variables
	configured in KEEP_ENV_VARS.  Fix one of the memory leaks.
	* userhelper.8.in (KEEP_ENV_VARS): Document variable.

	* userhelper.c (wrap): Use a single "val" variable instead of
	apps_banner, apps_sn, apps_domain, retry, noxoption.

	* pam-panel-icon.c (handle_drop_response): Use a static variable for
	the constant argv.

	* configure.in: Add more warning flags.  Fix all "unused parameter"
	warnings.  Add casts to silence all warnings caused by using char **
	for argument lists.
	(gccwerror): Process only if using gcc.
	* gsmclient.c (gsm_client_get_type): Add a missing initializer.
	(replace_one_prop): Don't shadow link ().
	* pam-panel-icon.c (child_io_func): Make "message" a const char *.

	* userdialogs.c (crate_message_box, create_error_box): Use
	const gchar * for input strings.
	* userdialogs.h (create_message_box, create_error_box): Update
	prototypes.
	* userhelper-wrap.c (userhelper_parse_exitstatus).  Update codes.create
	prototype.
	(userhelper_runv, userhelper_run): Use const char * for "path".
	* userhelper-wrap.h (userhelper_runv, userhelper_run): Update
	prototypes.
	* userhelper.c (prompt_pipe): Initialize "error" when returning FALSE.
	Remove dead code after an infinite cycle.
	(shell_valid): Fix a thinko, change the correct variable when handling
	empty shell names.
	(wrap): Use const char * for saved environment values.
	* usermount.c (format): Rename variable "format" to "fdformat" to avoid